UI: staking - fix btns spacing

--- a/src/hackathon_finals_frontend/src/Layouts/GlobalStyle/GlobalStyle.scss
+++ b/src/hackathon_finals_frontend/src/Layouts/GlobalStyle/GlobalStyle.scss
@@ -275,3 +275,7 @@ section {
   }
   
 }
+
+.ant-btn-primary{
+  background-color: #6345ed !important;
+}
